[package]
name = "grammetica-lib"
version = "0.1.0"
edition = "2021"
description = "Grammetica is a set of libraries that generates GLR parsers from grammar descriptions. grammetica-lib is the backend that transforms a set of rules into a state machine."
license = "BSD-3-Clause"
homepage = "https://github.com/motor-dev/Motor"
repository = "https://github.com/motor-dev/Motor"

[lib]

[dependencies]
